--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -9,6 +9,7 @@
   
     .buttons-container {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
   }
+
