--- a/src/components/lessons-preview/lessons-preview.styles.css
+++ b/src/components/lessons-preview/lessons-preview.styles.css
@@ -1,8 +1,8 @@
-/* Add this CSS to your stylesheets */
 .courses-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-basis: calc(80% - 20px); 
   }
   
   .courses-container > * {
