--- a/src/components/form-input/form-input.style.scss
+++ b/src/components/form-input/form-input.style.scss
@@ -13,7 +13,7 @@ $main-color: black;
 
   .form-input {
     background: none;
-    background-color: white;
+    background-color:whitesmoke;
     color: $sub-color;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
