--- a/src/components/info/info.styles.css
+++ b/src/components/info/info.styles.css
@@ -21,6 +21,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        margin: 16px; /* Adjust margin as needed */
+        margin: 16px; 
+    
     }
 }
